[package]
name = "async-lsp-client"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "The client used to connect to the LSP server."
homepage = "https://github.com/ren-wei/async-lsp-client"
documentation = "https://github.com/ren-wei/async-lsp-client"
repository = "https://github.com/ren-wei/async-lsp-client"
readme = "README.md"
keywords = ["client", "lsp", "languageservice", "languageserver"]
categories = ["development-tools"]

[dependencies]
tokio = { version = "1.44.2", features = ["io-util", "rt", "process"] }
tower-lsp = "0.20.0"
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"

[features]
tracing = []
